# ollama_llm_bench

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: ai_technology_eu_ai_act_029.yaml  ai_technology_gemma_release_026.yaml  ai_technology_llm_definition_027.yaml  ai_technology_transformer_innovation_028.yaml  ai_technology_webp_release_030.yaml  conditional_omission_organic_adjectives_002.yaml  contextual_rule_application_007.yaml  cultural_context_inference_004.yaml  data_type_inference_013.yaml  directional_ambiguity_test_009.yaml  event_log_text_to_csv_002.yaml  example_tasks.yml  forbidden_word_filter_004.yaml  history_geo_cold_war_alliance_005.yaml  history_geo_great_patriotic_war_002.yaml  history_geo_ww1_dates_001.yaml  implied_causality_detection_001.yaml  implied_relationship_mapping_006.yaml  inconsistent_narrative_detection_005.yaml  java_business_days_between.yaml  java_http_client_fetch_github_user.yaml  java_thread_safe_lru_cache.yaml  literature_culture_best_selling_2000_2009_006.yaml  literature_culture_harry_potter_resurrection_object_007.yaml  literature_culture_orwell_1984_inspiration_year_008.yaml  literature_culture_tolkien_lotr_original_title_009.yaml  multi_constraint_formatting_010.yaml  nested_config_text_to_xml_003.yaml  no_extra_words_populous_countries_001.yaml  node_sql_injection_fix.yaml  order_sensitive_transformation_006.yaml  precision_length_constraint_008.yaml  product_catalog_text_to_json_001.yaml  pronoun_reference_resolution_003.yaml  proofread_croatian_001.yaml  proofread_simple_sentence_001.yaml  (+44 more)
(+97 files in other folders)
